--- a/app/src/main/res/layout/item_wanted.xml
+++ b/app/src/main/res/layout/item_wanted.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:elevation="20dp"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -33,7 +34,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_race"
                 android:layout_width="match_parent"
                 android:text="title"
                 android:layout_height="wrap_content"/>
