--- a/app/src/main/res/layout/item_wanted.xml
+++ b/app/src/main/res/layout/item_wanted.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="20dp"
     android:layout_margin="5dp"
+    app:cardCornerRadius="20dp"
+    android:backgroundTint="@color/black"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -11,6 +14,8 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/img_face"
+
             android:src="@drawable/ic_launcher_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -23,6 +28,8 @@
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="name"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"/>
@@ -30,12 +37,16 @@
             <TextView
                 android:id="@+id/tv_nationality"
                 android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:textColor="@color/white"
                 android:text="nationality"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/tv_race"
                 android:layout_width="match_parent"
+                android:textColor="@color/white"
+                android:textAlignment="center"
                 android:text="title"
                 android:layout_height="wrap_content"/>
 
